Demo show ìndex

--- a/Bookstore/Web.config
+++ b/Bookstore/Web.config
@@ -72,7 +72,7 @@
     </entityFramework>
     <connectionStrings>
         <add name="BookstoreDb1"
-             providerName="System.Data.SqlClient"
-             connectionString="Server=hanabi\SQLEXPRESS;Database=bookstore;Integrated Security=True;"/>
+             connectionString="data source=HANABI\SQLEXPRESS;initial catalog=Bookstore;user id=hanabi;password=1234;multipleactiveresultsets=True;application name=EntityFramework"
+             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
